Bug 1773128 - Block webrender on several PowerVR GPUs due to crash. r=gfx-reviewers,nical a=pascalc

There is a crash in glFenceSync (used to recycle PBOs when uploading
textures) affecting several PowerVR GPUs. Block webrender on the known
bad combinations of GPU and driver versions.

Differential Revision: https://phabricator.services.mozilla.com/D148638